# mental-health-nlp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: model.yaml
note/: note_001.md  note_002.md
notebooks/: 01_explore_dataset.ipynb  02_build_dataset.ipynb  03_train_distilbert.ipynb  04_train_distilbert_cnn.ipynb  05_train_cnn.ipynb
src/mh_nlp/application/dto/: clean_dataset_dto.py  dataset_dto.py
src/mh_nlp/application/use_cases/: build_clean_dataset.py  build_dataset.py  evaluate_model.py  predict.py  split_dataset.py  train_model.py
src/mh_nlp/domain/entities/: document.py  label.py
src/mh_nlp/domain/ports/: classifier.py  cleaning_engine.py  dataset_repository.py  fast_cleaning_engine.py  tokenizer.py
src/mh_nlp/domain/services/: fast_text_cleaner.py  text_cleaner.py
src/mh_nlp/infrastructure/data/: kaggle_repository.py
src/mh_nlp/infrastructure/models/: cnn_classifier.py  distilbert_classifier.py  distilbert_cnn_classifier.py  roberta_classifier.py
src/mh_nlp/infrastructure/nlp/: fast_tokenizers.py  hf_tokenizer.py  keras_tokenizer.py  spacy_tokenizer.py  tokenizers.py
src/mh_nlp/infrastructure/training/: torch_trainer.py
src/mh_nlp/interface/: cli.py  container.py
src/mh_nlp/utils/: __init__.py  logging.py
tests/fixtures/: mini_mental_health.csv
tests/infrastructure/: test_cleaning.py
tests/integration/: test_cnn_keras_classifier.py  test_container.py  test_distilbert_cnn_classifier.py  test_roberta_classifier.py
tests/unit/application/: test_build_dataset.py
tests/unit/domain/: test_text_cleaner.py
tests/unit/port/: test_kaggle_repository.py
